Fix overflow jump bug

--- a/styles/base.less
+++ b/styles/base.less
@@ -78,7 +78,7 @@ atom-pane-resize-handle.vertical + atom-pane {
 .atom-dock-toggle-button {
   padding: 10px;
   overflow: visible;
-  transition: opacity ease 0.3s, transform ease 0.3s;
+  transition: opacity ease .3s, transform ease 0.3s;
 
   &.left {
     width: 56px;
@@ -99,20 +99,20 @@ atom-pane-resize-handle.vertical + atom-pane {
   }
 
   &:not(.atom-dock-toggle-button-visible) .atom-dock-toggle-button-inner.left {
-    transform: translateX(-30px) !important;
+    transform: translateX(-3px) !important;
     pointer-events: none;
     opacity: 0;
   }
 
   &:not(.atom-dock-toggle-button-visible) .atom-dock-toggle-button-inner.right {
-    transform: translateX(30px) !important;
+    transform: translateX(3px) !important;
     pointer-events: none;
     opacity: 0;
   }
 
   &:not(.atom-dock-toggle-button-visible)
     .atom-dock-toggle-button-inner.bottom {
-    transform: translateY(30px) !important;
+    transform: translateY(3px) !important;
     pointer-events: none;
     opacity: 0;
   }
@@ -125,6 +125,7 @@ atom-pane-resize-handle.vertical + atom-pane {
     border: none;
     box-shadow: 0 2px 8px fade(@black-color, 10%),
       0 1px 2px fade(@black-color, 10%), 0 0 0 1px fade(@black-color, 5%);
+    transition: opacity ease .3s, transform ease 0.3s;
 
     .icon {
       transform: none !important;
